// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`welcome_actions getNextLang Dispatches the correct action and payload 1`] = `
Array [
  Object {
    "type": "SET_NEXT_LANG",
  },
]
`;

exports[`welcome_actions toggleFade Dispatches the correct action and payload 1`] = `
Array [
  Object {
    "type": "TOGGLE_FADE",
  },
]
`;
